--- a/app/src/main/res/drawable/shape_r18_a0_808844ff_804488ff_rect.xml
+++ b/app/src/main/res/drawable/shape_r18_a0_808844ff_804488ff_rect.xml
@@ -6,7 +6,7 @@
 
     <gradient
         android:angle="0"
-        android:endColor="@color/colorFF4488FF"
-        android:startColor="@color/colorFF8844FF" />
+        android:endColor="@color/color804488FF"
+        android:startColor="@color/color808844FF" />
 
 </shape>
