--- a/app/src/main/res/layout/activity_button.xml
+++ b/app/src/main/res/layout/activity_button.xml
@@ -9,22 +9,34 @@
         android:id="@+id/button"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:layout_marginTop="200dp"
         android:background="@drawable/selector_button"
         android:text="Button"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_btn"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="50dp"
+        android:background="@drawable/selector_button"
+        android:gravity="center"
+        android:text="Button"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/button" />
 
     <TextView
         android:id="@+id/tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        android:text="切换btn的enable状态"
+        android:text="切换enable状态"
         android:textSize="18sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/button" />
+        app:layout_constraintTop_toBottomOf="@id/tv_btn" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
