--- a/app/src/main/res/layout/activity_iv_adjust_view_bounds.xml
+++ b/app/src/main/res/layout/activity_iv_adjust_view_bounds.xml
@@ -9,6 +9,7 @@
         android:id="@+id/iv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:scaleType="centerCrop"
         android:src="@drawable/ic_iv_adjust_view_bounds" />
 
 </RelativeLayout>
