--- a/app/src/main/res/layout/activity_iv_adjust_view_bounds.xml
+++ b/app/src/main/res/layout/activity_iv_adjust_view_bounds.xml
@@ -5,11 +5,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/iv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:scaleType="centerCrop"
-        android:src="@drawable/ic_iv_adjust_view_bounds" />
+    <!-- 保证能够完整显示ImageView的内容 -->
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/iv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:src="@drawable/ic_iv_adjust_view_bounds" />
+
+    </ScrollView>
 
 </RelativeLayout>
