--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="color808844FF">#808844FF</color>
     <color name="colorFF4488FF">#FF4488FF</color>
     <color name="color804488FF">#804488FF</color>
+    <color name="color00000000">#00000000</color>
 </resources>
