--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,6 @@
     <color name="colorFF4488FF">#FF4488FF</color>
     <color name="color804488FF">#804488FF</color>
     <color name="color00000000">#00000000</color>
+    <color name="colorFFFFEB3B">#FFFFEB3B</color>
+    <color name="colorFF8BC34A">#FF8BC34A</color>
 </resources>
