--- a/app/src/main/res/layout/adapter_constraint_flow.xml
+++ b/app/src/main/res/layout/adapter_constraint_flow.xml
@@ -7,6 +7,11 @@
     tools:ignore="MissingConstraints">
 
     <!--
+        当flow_wrapMode属性为aligned和chain时，通过flow_maxElementsWrap属性控制每行最大的子View数量。
+        例如：flow_maxElementsWrap=3。
+
+        orientation:设置Flow对View的组织方式（水平/垂直)
+
         flow_horizontalGap：两个引用资源（控件）之间水平间隔。
         flow_verticalGap：两个引用资源（控件）之间垂直间隔。
 
@@ -27,11 +32,14 @@
                 flow_lastVerticalStyle 同水平约束。
                 flow_verticalStyle 约束所有垂直链。
 
+        对齐：flow_verticalAlign： 垂直方向对齐,取值有：top、bottom、center、baseline;
+             flow_horizontalAlign 水平方向对齐,取值有：start、end、center
     -->
     <androidx.constraintlayout.helper.widget.Flow
         android:id="@+id/flow"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
         app:constraint_referenced_ids="tvA,tvB,tvC,tvD,tvE,tvF,tvG,tvH"
         app:flow_horizontalGap="30dp"
         app:flow_horizontalStyle="spread"
@@ -92,7 +100,7 @@
 
     <TextView
         android:id="@+id/tvF"
-        android:layout_width="50dp"
+        android:layout_width="30dp"
         android:layout_height="50dp"
         android:background="@color/color808844FF"
         android:gravity="center"
@@ -102,7 +110,7 @@
 
     <TextView
         android:id="@+id/tvG"
-        android:layout_width="50dp"
+        android:layout_width="20dp"
         android:layout_height="50dp"
         android:background="@color/color804488FF"
         android:gravity="center"
@@ -112,7 +120,7 @@
 
     <TextView
         android:id="@+id/tvH"
-        android:layout_width="50dp"
+        android:layout_width="100dp"
         android:layout_height="50dp"
         android:background="@color/colorFFFFEB3B"
         android:gravity="center"
@@ -124,31 +132,50 @@
         android:id="@+id/btn_wrap_mode"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="5dp"
         android:text="flow_wrapMode"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_chainStyle="spread"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/btn_horizontal_style" />
+        app:layout_constraintRight_toRightOf="parent" />
 
     <Button
         android:id="@+id/btn_horizontal_style"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="30dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginBottom="5dp"
         android:text="horizontal_Style"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/btn_wrap_mode"
-        app:layout_constraintRight_toLeftOf="@id/btn_vertical_style" />
+        app:layout_constraintBottom_toTopOf="@id/btn_wrap_mode"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <Button
         android:id="@+id/btn_vertical_style"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="30dp"
-        android:text="btn_vertical_style"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/btn_horizontal_style"
+        android:layout_marginLeft="20dp"
+        android:layout_marginBottom="5dp"
+        android:text="vertical_style"
+        app:layout_constraintBottom_toTopOf="@id/btn_horizontal_style"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <Button
+        android:id="@+id/btn_horizontal_align"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="5dp"
+        android:text="horizontal_align"
+        app:layout_constraintBottom_toTopOf="@id/btn_wrap_mode"
+        app:layout_constraintRight_toRightOf="parent" />
+
+    <Button
+        android:id="@+id/btn_vertical_align"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="5dp"
+        android:text="vertical_align"
+        app:layout_constraintBottom_toTopOf="@id/btn_horizontal_align"
         app:layout_constraintRight_toRightOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
