--- a/app/src/main/res/layout/adapter_constraint_layout.xml
+++ b/app/src/main/res/layout/adapter_constraint_layout.xml
@@ -61,11 +61,42 @@
         android:text="百分比"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHeight_default="percent"
-        app:layout_constraintHeight_percent="0.2"
+        app:layout_constraintHeight_percent="0.1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintWidth_default="percent"
         app:layout_constraintWidth_percent="0.7" />
+
+    <Button
+        android:id="@+id/btn_gone_margin1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
+        android:text="goneMargin1"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@id/btn3"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <!--
+        layout_goneMarginStart
+        layout_goneMarginEnd
+        layout_goneMarginLeft
+        layout_goneMarginTop
+        layout_goneMarginRight
+        layout_goneMarginBottom
+
+        当依赖的控件的可见行为gone后，使用上面的属性后能够保持对应的margin。
+    -->
+    <Button
+        android:id="@+id/btn_gone_margin2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginBottom="5dp"
+        android:text="goneMargin2"
+        app:layout_constraintBottom_toTopOf="@id/btn3"
+        app:layout_constraintLeft_toRightOf="@id/btn_gone_margin1"
+        app:layout_goneMarginLeft="100dp" />
 
 
     <!--
