--- a/app/src/main/res/layout/adapter_constraint_layout.xml
+++ b/app/src/main/res/layout/adapter_constraint_layout.xml
@@ -33,16 +33,6 @@
     如果宽和高都设置为0dp（MATCH_CONSTRAINT），那么layout_constraintDimensionRatio的值需要先加一个"W,
     "或者"H,"来表示约束宽度或高度,下面的例子是首先宽度将满足父布局的约束，然后将按照16：9的比例设置高度
     -->
-    <Button
-        android:id="@+id/btn2"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:text="宽高比：H,16:9"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintDimensionRatio="H,16:9"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
 
     <!--
@@ -54,6 +44,58 @@
     app:layout_constraintHeight_default="percent" //设置高为百分比，可省略
     app:layout_constraintHeight_percent="0.3" //0到1之间的值
     -->
+    <Button
+        android:id="@+id/btn2"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:text="宽高比：H,16:9"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="H,16:9"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.498" />
+
+    <Button
+        android:id="@+id/btn_barrier1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="btn_barrier1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btn2" />
+
+    <Button
+        android:id="@+id/btn_barrier2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="20dp"
+        android:text="btn_barrier2"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btn_barrier1" />
+
+    <!--
+        constraint_referenced_ids：资源id。
+        barrierDirection：相对于constraint_referenced_ids的方向，
+    -->
+    <androidx.constraintlayout.widget.Barrier
+        android:id="@+id/barrier"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:barrierDirection="right"
+        app:constraint_referenced_ids="btn_barrier1,btn_barrier2" />
+
+    <Button
+        android:id="@+id/btn_barrier3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:gravity="center"
+        android:padding="12dp"
+        android:text="btn_barrier3"
+        app:layout_constraintLeft_toRightOf="@id/barrier"
+        app:layout_constraintTop_toTopOf="@id/btn_barrier1" />
+
     <Button
         android:id="@+id/btn3"
         android:layout_width="0dp"
