--- a/app/src/main/res/xml/activity_motion_scene.xml
+++ b/app/src/main/res/xml/activity_motion_scene.xml
@@ -3,6 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:defaultDuration="500">
 
+    <!--
+        defaultDuration:未指定时间的动画的默认时间，默认为300毫秒。
+    -->
+
     <!-- 开始动画 -->
     <ConstraintSet android:id="@+id/start">
         <!--执行动画的控件，id一定要写，要和布局中的id一致；宽高也要写，不然没效果-->
@@ -48,7 +52,8 @@
 
 
     <!--
-    Transition表示一个动画，常用属性：
+    MotionScene根标签 必须包含Transition标签，可以有多个Transition标签。Transition标签是用来指定动画的开始和
+    结束状态、任何中间状态以及触发动画的动作，可以理解为一个Transition标签对应一个动画。
 
     constraintSetStart:指定动画初始状态；
     constraintSetEnd:指定动画结束状态；
@@ -147,20 +152,20 @@
             <!--                app:motionTarget="@id/view2" />-->
 
 
-<!--            <KeyAttribute-->
-<!--                android:translationX="90dp"-->
-<!--                app:framePosition="50"-->
-<!--                app:motionTarget="@id/view2" />-->
+            <!--            <KeyAttribute-->
+            <!--                android:translationX="90dp"-->
+            <!--                app:framePosition="50"-->
+            <!--                app:motionTarget="@id/view2" />-->
 
-<!--            <KeyAttribute-->
-<!--                android:translationY="90dp"-->
-<!--                app:framePosition="50"-->
-<!--                app:motionTarget="@id/view2" />-->
+            <!--            <KeyAttribute-->
+            <!--                android:translationY="90dp"-->
+            <!--                app:framePosition="50"-->
+            <!--                app:motionTarget="@id/view2" />-->
 
-<!--            <KeyAttribute-->
-<!--                android:translationZ="90dp"-->
-<!--                app:framePosition="50"-->
-<!--                app:motionTarget="@id/view2" />-->
+            <!--            <KeyAttribute-->
+            <!--                android:translationZ="90dp"-->
+            <!--                app:framePosition="50"-->
+            <!--                app:motionTarget="@id/view2" />-->
 
 
         </KeyFrameSet>
