--- a/app/src/main/res/xml/activity_motion_scene.xml
+++ b/app/src/main/res/xml/activity_motion_scene.xml
@@ -64,7 +64,7 @@
     motionInterpolator:插值器。取值有：linear线性(匀速)、bounce弹簧、easeIn淡入（缓慢开始）、easeOut淡出（缓慢结束）、easeInOut淡入淡出(缓慢开始和结束);
     transitionDisable：允许动画功能。取值：false和true；
     layoutDuringTransition:动画过程中，MotionLayout子View调用reqeustLayout，是否做出响应。
-                            取值honorRequest响应、ignoreRequest忽略；(beta 4)
+                            取值honorRequest响应、ignoreRequest忽略；
     -->
     <Transition
         app:constraintSetEnd="@id/end"
