--- a/app/src/main/res/layout/adapter_constraint_iv_filter_btn.xml
+++ b/app/src/main/res/layout/adapter_constraint_iv_filter_btn.xml
@@ -53,7 +53,7 @@
         android:layout_height="100dp"
         android:layout_marginTop="50dp"
         android:src="@color/color808844FF"
-        app:altSrc="@color/background_error"
+        app:altSrc="@color/colorFFFFEB3B"
         app:crossfade="0.5"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
