--- a/app/src/main/res/xml/activity_motion_scene.xml
+++ b/app/src/main/res/xml/activity_motion_scene.xml
@@ -88,19 +88,21 @@
         KeyFrameSet标签含有KeyPosition和KeyAttribute两个子标签，这些共同构成过渡动画过程中某特殊状态的位置和属性。
 
         KeyPosition位置关键帧标签的属性：
-        framePosition：当前关键帧的位置，把整个运动动画分成100个位置，取值0到99，那么初始状态的位置就是0，结束状态就是99。
-        keyPositionType:参考坐标系的选择，决定了percentX和percentY属性取值的结果。
-                        1.parentRelative：坐标系基于motionTarget指向的控件的父视图。（demo里面的父视图是全局，
-                          所以坐标系原点在屏幕的左上角）；
+        framePosition：关键帧位置，把整个运动动画分成100个位置，取值0到99，那么初始状态的位置就是0，结束状态就是99。
+        keyPositionType：参考坐标系的选择，决定了percentX和percentY属性取值的结果。
+                        1.parentRelative：以整个 MotionLayout 的布局为坐标系，左上角为坐标原点（参考 View 的坐标系即可）
                         2.deltaRelative：坐标系选择参照整个过渡动画的位置，那么起始状态的位置就是原点（0,0），
                           结束状态的位置就是终点（1,1）（但是以我们demo为例子，结束状态的x轴没有发生偏移，所以
                           以这种模式去设置percentX是没有效果的）；
                         3.pathRelative:坐标系选择参照整个运动路径，即起始和终点的直线距离构成X轴，此时y轴就有正
                         负之分，表示在X轴的左边还是右边。x轴和y轴的长度都是等于路径的长度。
+       percentX、percentY：设置关键帧位置的偏移量，取值一般为 0 — 1，当然也可以设置为负数或者大于一。
 
         percentWidth和percentHeight属性表示视图自身大小，如果整个动画过程中，视图大小不存在变化，是没有效果的。
         将正方形在起始状态和结束状态的大小改为不一致，就可以看到效果，percentWidth和percentHeight属性会导致
         sizePercent属性失效。
+
+        KeyAttribute属性关键帧
          -->
         <KeyFrameSet>
             <KeyPosition
